# vjepa2

./: .gitignore  CLAUDE.md  analyze_wandb_run.py  create_csv.py  eval_transfer.py  exp_progress.md  inference.ipynb  long_horizon_sims.md  main.py  march_31_convo.md  planning_benchmarks.md  precompute_patch_feats.py  pyproject.toml  repo_context.md  report.md  train.py
app/vjepa/: transforms.py
docs/: A2_multi_horizon_training.md  april_3_meet.md  causal_transformer.md  data.md  exp_progress.md  make_slides.py  meanpool_patches_experiment.md  meet1.md  meet2.md  memory.md  repo_context.md  stage1.md
evals/video_classification_frozen/: utils.py
root/: Untitled  argparse.py  args.py  dataset.py  ddp.py  model.py  utils.py
root/config/: base.yaml
root/evals/: autoregressive_rollout.py  mlp_probe.py  multi_horizon_probe.py  static_dynamic_decomposition.py  temporal_shuffle_test.py
root/models/: __init__.py  causal_transformer.py  encoder.py  model.py  rnn.py
scripts/: create_ucf101_csv.py  prepare_ucf101.sh  verify_ckpt_backcompat.py  verify_multi_horizon.py
scripts/repro/: mlp_probe_tier1.sh  table1_ucf101_probe.sh  table2_ssv2_pred_loss_cls.sh  table3_ssv2_pred_loss_patches.sh  table3b_ssv2_pred_loss_meanpool.sh  table4_temporal_shuffle.sh  table5_copy_shuffle_ratio.sh  table6_static_dynamic_decomposition.sh
src/datasets/: video_dataset.py
