[project]
name = "vjepa2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "decord>=0.6.0",
    "einops>=0.8.1",
    "einx>=0.3.0",
    "fire>=0.7.1",
    "h5py>=3.15.1",
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "notebook>=7.5.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pillow>=12.1.0",
    "python-box>=7.3.2",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "submitit>=1.5.4",
    "tensorboard>=2.20.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
    "webdataset>=1.0.2",
    "x-transformers>=2.14.2",
]
